--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: go
 go: 
-  - "1.8.1"
+  - "1.10.1"
 
-go_import_path: github.com/djavorszky/ddn
+go_import_path: github.com/djavorszky/ddn-api
 
 services: 
   - mysql
