--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,8 @@ dist/data
 !srv.conf
 !default.conf
 
-agent/exports
-agent/agent*
-server/server*
-server/web/dumps/*
 node_modules
 
 out
+
+ddn-api
